--- a/Ejercicio 3.4/miestilo.css
+++ b/Ejercicio 3.4/miestilo.css
@@ -5,6 +5,14 @@ h1 {
     margin-bottom: 1px;
 }
 
+.viernes:hover,
+tbody tr td:nth-child(5):hover,
+tbody tr td:nth-child(6):hover {
+    font-size: 2em;
+}
+
+
+
 .horas {
     background-color: green;
 }
@@ -27,10 +35,6 @@ a:link {
     color: green;
 }
 
-.viernes:hover {
-    font-size: 2em;
-}
-
 table,
 th,
 td {
@@ -40,7 +44,7 @@ td {
     margin-right: auto;
 }
 
-th:first-letter {
+th::first-letter {
     font-size: 2em;
     font-weight: bold;
 }
@@ -53,8 +57,30 @@ form {
 
 input {
     border-color: red;
+    width: 25%;
+}
+
+input:hover {
+    background-color: lightgray;
+}
+
+.asterisco {
+    font-size: small;
+    color: black;
 }
 
 .asterisco {
     color: red;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #ffffff;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #ffffff;
+}
+
+td:contains("Matemáticas") {
+    background-color: #ffffff;
 }
