--- a/AbejasyZánganosFinal/1.css
+++ b/AbejasyZánganosFinal/1.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-SDFV
+
 body {
     font-family: Arial, sans-serif;
     color: #333;
@@ -31,55 +31,78 @@ header {
 }
 
 .logo {
-    width: 50px;
-    height: 50px;
+    width: 130px;
+    height: 130px;
 }
 
 nav {
     display: flex;
-    gap: 15px;
     justify-content: center;
-    margin-top: 10px;
+    gap: 15px;
+    margin: 10px 0;
 }
 
 nav a {
     color: black;
     background-color: white;
+    padding: 8px 15px;
+    border-radius: 8px;
     text-decoration: none;
-    border: 1px solid black;
-    padding: 5px 10px;
-    border-radius: 5px;
+    font-weight: bold;
 }
-
 
 .intro-section {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     background-color: #ff9000;
     color: white;
-    padding: 20px;
+    padding: 40px 20px;
 }
 
 .intro-text {
     flex: 1;
     padding-right: 20px;
+    text-align: center;
 }
+
+.intro-text h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.intro-text p {
+    font-size: 22px;
+    line-height: 1.5;
+    text-align: center;
+}
+
 
 .intro-image {
     flex: 1;
+    text-align: center;
 }
 
 .intro-image img {
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    max-width: 600px;
+    height: auto;
     border-radius: 10px;
 }
 
 .video-preview {
     margin-top: 15px;
     display: flex;
-    align-items: center;
+    justify-content: center;
 }
+
+iframe {
+    width: 100%;
+    max-width: 560px;
+    height: 315px;
+    border-radius: 10px;
+}
+
 
 .video-placeholder {
     width: 50px;
@@ -136,34 +159,29 @@ nav a {
     color: #333;
 }
 
-
-.product-image {
-    width: 100%;
-    height: 100px;
-    background-color: #ccc;
-    margin-bottom: 10px;
-}
-
 footer {
     background-color: #c89f39;
     padding: 20px;
     color: #333;
-    font-size: 12px;
+    font-size: 18px;
 }
 
 .footer-content {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .contact-info,
 .social-media {
     text-align: center;
     margin-top: 20px;
+    flex: 1;
+    min-width: 250px;
 }
 
 .social-media h1 {
-    font-size: 18px;
+    font-size: 29px;
     color: #333;
     margin-bottom: 10px;
 }
